--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
     </section>
     <section class="article-item">
       <article class="article-inner">
-        <a class="article-link" href="https://github.com/microsoft/terminal"></a>
-        <h2 class="article-title">terminal</h2>
+        <a class="article-link" href="./waterfallflow/index.html"></a>
+        <h2 class="article-title">waterfallflow</h2>
         <div class="article-meta">
           <strong>Sukoshi</strong>
           发布于
           <time>2020/06/10</time>
         </div>
         <div class="article-tag">
-          <a href="javascript:;">windows-terminal</a>
+          <a href="javascript:;">waterfallflow</a>
         </div>
       </article>
     </section>
