--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </a>
       </div>
       <p>© 2020 <strong>Sukoshi</strong></p>
-      <p><a href="http://www.beian.miit.gov.cn/">蜀ICP备15014309号</a></p>
+      <p><a href="https://beian.miit.gov.cn/">蜀ICP备15014309号</a></p>
       <p><strong>打工吧！魔王大人</strong></p>
     </div>
   </div>
